--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -57,4 +57,4 @@ isolate-workers = false
 tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
 ipv4-network = 172.16.100.0
 ipv4-netmask = 255.255.255.0
-dns = 172.16.100.1
+#dns = 172.16.100.1
