--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -46,7 +46,7 @@ deny-roaming = false
 rekey-time = 32400
 rekey-method = ssl
 use-utmp = true
-use-occtl = false
+use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
@@ -55,6 +55,6 @@ cisco-client-compat = true
 tunnel-all-dns = true
 isolate-workers = false
 tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
-ipv4-network = 172.16.100.0
+ipv4-network = 192.168.8.0
 ipv4-netmask = 255.255.255.0
-#dns = 172.16.100.1
+dns = 192.168.8.1
