--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -58,3 +58,11 @@ tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-SSL3.0:
 ipv4-network = 192.168.8.0
 ipv4-netmask = 255.255.255.0
 dns = 192.168.8.1
+server=100.100.2.138#53
+server=100.100.2.136#53
+server=101.6.6.6#5353
+server=202.141.162.123#5353
+server=202.141.178.13#5353
+server=202.38.93.153#5353
+server=223.5.5.5#53
+server=223.6.6.6#53
