--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -1,4 +1,10 @@
-# ocserv.conf
+# Autorun ocserv
+# Append '@reboot root bash /etc/ocserv/ocserv.d >/dev/null 2>&1 &' in /etc/crontab
+
+# The default domain to be advertised
+# Connection-specific DNS suffixes
+default-domain = srv
+
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 #auth = "certificate"
 #enable-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
@@ -8,17 +14,17 @@ enable-auth = "certificate"
 tcp-port = 443
 #udp-port = 443
 
-server-cert = /etc/ocserv/server-cert.pem
-server-key = /etc/ocserv/server-key.pem
-ca-cert = /etc/ocserv/ca-cert.pem
+server-cert = /etc/ocserv/server.cert.pem
+server-key = /etc/ocserv/server.key.pem
+ca-cert = /etc/ocserv/ca.cert.pem
 dh-params = /etc/ocserv/dh.pem
 
 socket-file = /var/run/ocserv.socket
 occtl-socket-file = /var/run/occtl.socket
 pid-file = /var/run/ocserv.pid
-user-profile = /etc/ocserv/profile.xml
+#user-profile = /etc/ocserv/profile.xml
 run-as-user = nobody
-run-as-group = nogroup
+run-as-group = daemon
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
 config-per-group = /etc/ocserv/group
@@ -26,43 +32,35 @@ default-group-config = /etc/ocserv/group/Default
 default-select-group = Default
 auto-select-group = false
 net-priority = 6
-max-clients = 256
-max-same-clients = 256
-switch-to-tcp-timeout = 0
+max-clients = 0
+max-same-clients = 0
+switch-to-tcp-timeout = 24
 max-ban-score = 0
-keepalive = 32400
+keepalive = 86400
 dpd = 96
-mobile-dpd = 1800
-#output-buffer = 1000
-try-mtu-discovery = true
+mobile-dpd = 1024
+try-mtu-discovery = false
+#output-buffer = 64
 compression = false
 no-compress-limit = 512
 auth-timeout = 48 
-idle-timeout = 1024
+idle-timeout = 900
 mobile-idle-timeout = 1024
-cookie-timeout = 32400
-persistent-cookies = true
+cookie-timeout = 48
+persistent-cookies = false
 deny-roaming = false
-rekey-time = 32400
+rekey-time = 86400
 rekey-method = ssl
-use-utmp = true
+use-utmp = false
 use-occtl = true
 device = ocserv
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 dtls-psk = false
 cisco-client-compat = true
 tunnel-all-dns = true
 isolate-workers = false
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-RSA:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
 ipv4-network = 192.168.8.0
 ipv4-netmask = 255.255.255.0
 dns = 192.168.8.1
-server=100.100.2.138#53
-server=100.100.2.136#53
-server=101.6.6.6#5353
-server=202.141.162.123#5353
-server=202.141.178.13#5353
-server=202.38.93.153#5353
-server=223.5.5.5#53
-server=223.6.6.6#53
