--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -12,7 +12,7 @@ enable-auth = "certificate"
 
 # TCP and UDP port number
 tcp-port = 443
-udp-port = 27777
+#udp-port = 443
 
 server-cert = /etc/ocserv/server.cert.pem
 server-key = /etc/ocserv/server.key.pem
@@ -22,7 +22,7 @@ dh-params = /etc/ocserv/dh.pem
 socket-file = /var/run/ocserv.socket
 occtl-socket-file = /var/run/occtl.socket
 pid-file = /var/run/ocserv.pid
-user-profile = /etc/ocserv/profile.xml
+#user-profile = /etc/ocserv/profile.xml
 run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
@@ -40,58 +40,7 @@ keepalive = 86400
 dpd = 96
 mobile-dpd = 1800
 try-mtu-discovery = true
-output-buffer = 64
-compression = false
-no-compress-limit = 512
-auth-timeout = 48
-idle-timeout = 900
-mobile-idle-timeout = 1024
-cookie-timeout = 32400
-persistent-cookies = false
-root@2-58-242-51:/etc/ocserv# cat ocserv.conf 
-# Autorun ocserv
-# Append '@reboot root bash /etc/ocserv/ocserv.d >/dev/null 2>&1 &' in /etc/crontab
-
-# The default domain to be advertised
-# Connection-specific DNS suffixes
-default-domain = srv
-
-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
-#auth = "certificate"
-#enable-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
-enable-auth = "certificate"
-
-# TCP and UDP port number
-tcp-port = 443
-udp-port = 27777
-
-server-cert = /etc/ocserv/server.cert.pem
-server-key = /etc/ocserv/server.key.pem
-ca-cert = /etc/ocserv/ca.cert.pem
-dh-params = /etc/ocserv/dh.pem
-
-socket-file = /var/run/ocserv.socket
-occtl-socket-file = /var/run/occtl.socket
-pid-file = /var/run/ocserv.pid
-user-profile = /etc/ocserv/profile.xml
-run-as-user = nobody
-run-as-group = daemon
-cert-user-oid = 2.5.4.3
-cert-group-oid = 2.5.4.11
-config-per-group = /etc/ocserv/group
-default-group-config = /etc/ocserv/group/Default
-default-select-group = Default
-auto-select-group = false
-net-priority = 6
-max-clients = 256
-max-same-clients = 256
-switch-to-tcp-timeout = 24
-max-ban-score = 0
-keepalive = 86400
-dpd = 96
-mobile-dpd = 1800
-try-mtu-discovery = true
-output-buffer = 64
+#output-buffer = 64
 compression = false
 no-compress-limit = 512
 auth-timeout = 48 
