--- a/.github/workflows/anyconnec_noroute_build.yml
+++ b/.github/workflows/anyconnec_noroute_build.yml
@@ -20,6 +20,7 @@ jobs:
         run: if [ -f NoRote_requirements.txt ]; then pip install -r NoRote_requirements.txt; fi
         
       - name: Run Build
-        run: cd Anyconnect/build,
+        run: |
+             cd Anyconnect/build
              python NoRoute_build.py
 
