--- a/.github/workflows/anyconnec_noroute_build.yml
+++ b/.github/workflows/anyconnec_noroute_build.yml
@@ -17,7 +17,9 @@ jobs:
           python-version: 2.7
           
       - name: 'Install pip'
-        run: pip install requests netaddr
+        run: |
+             pip install requests 
+             pip install netaddr
        
       - name：'Build'
         run: |
