--- a/.github/workflows/anyconnec_noroute_build.yml
+++ b/.github/workflows/anyconnec_noroute_build.yml
@@ -30,7 +30,7 @@ jobs:
              wget -N http://ftp.lacnic.net/pub/stats/lacnic/delegated-lacnic-extended-latest
              wget -N http://ftp.ripe.net/pub/stats/ripencc/delegated-ripencc-extended-latest
              cat delegated-afrinic-extended-latest delegated-apnic-extended-latest delegated-arin-extended-latest delegated-lacnic-extended-latest delegated-ripencc-extended-latest>>delegated-all-latest
-             cat delegated-all-latest | grep ipv4 | grep CN | awk -F\| '{ printf("%s/%d\n", $4, 32-log($5)/log(2)) }' >chnroute.txt
+             cat delegated-all-latest | grep ipv4 | grep CN | awk -F\| '{ printf("%s/%d\n", $4, 32-log($5)/log(2)) }' >cnroute.txt
              python NoRoute_build.py
              ls -al
       - name: push
