--- a/Anyconnect/openwrt/smartdns_cmcc_net.conf
+++ b/Anyconnect/openwrt/smartdns_cmcc_net.conf
@@ -12,3 +12,6 @@ ipset /.namesilo.com/gfwlist
 
 nameserver /.shadowrocket.online/office
 ipset /.shadowrocket.online/gfwlist
+
+nameserver /hostloc.com/office
+ipset /hostloc.com/gfwlist
