--- a/.github/workflows/Clean-Workflows.yml
+++ b/.github/workflows/Clean-Workflows.yml
@@ -28,5 +28,5 @@ jobs:
         env:
           GITHUB_REPO: ${{ github.repository }}
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
-          EXPIRE_TIME: '1h'
+          EXPIRE_TIME: '7d'
         run: pipenv run python run.py
