--- a/.github/workflows/Build_Ocserv_Noroute.yml
+++ b/.github/workflows/Build_Ocserv_Noroute.yml
@@ -27,8 +27,8 @@ jobs:
              python NoRoute_build.py
 
       - name: push
-      - uses: github-actions-x/commit@v2.8
-       with:
+        uses: github-actions-x/commit@v2.8
+        with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         push-branch: 'master'
         commit-message: 'publish'
