--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -1,6 +1,3 @@
-# Autorun ocserv
-# Append '@reboot root bash /etc/ocserv/ocserv.d >/dev/null 2>&1 &' in /etc/crontab
-
 # The default domain to be advertised
 # Connection-specific DNS suffixes
 default-domain = srv
@@ -10,57 +7,64 @@ auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 #enable-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 enable-auth = "certificate"
 
-# TCP and UDP port number
+# TCP and UDP port
 tcp-port = 443
-#udp-port = 443
+udp-port = 0
+
+run-as-user = nobody
+run-as-group = daemon
 
 server-cert = /etc/ocserv/server.cert.pem
 server-key = /etc/ocserv/server.key.pem
 ca-cert = /etc/ocserv/ca.cert.pem
-dh-params = /etc/ocserv/dh.pem
 
-socket-file = /var/run/ocserv.socket
-occtl-socket-file = /var/run/occtl.socket
-pid-file = /var/run/ocserv.pid
-#user-profile = /etc/ocserv/profile.xml
-run-as-user = nobody
-run-as-group = daemon
+socket-file = /run/ocserv.socket
+occtl-socket-file = /run/occtl.socket
+pid-file = /run/ocserv.pid
+
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
 config-per-group = /etc/ocserv/group
 default-group-config = /etc/ocserv/group/Default
 default-select-group = Default
 auto-select-group = false
+
 net-priority = 6
-max-clients = 256
-max-same-clients = 256
-switch-to-tcp-timeout = 24
+max-clients = 0
+max-same-clients = 0
+# switch-to-tcp-timeout = 0
 max-ban-score = 0
+min-reauth-time = 1
+dpd = 3
+idle-timeout = 8
+# mobile-dpd = 8
+# mobile-idle-timeout = 32
+persistent-cookies = true
+cookie-timeout = 86400
+auth-timeout = 64
 keepalive = 86400
-dpd = 96
-mobile-dpd = 1800
-try-mtu-discovery = true
-#output-buffer = 64
-compression = false
-no-compress-limit = 512
-auth-timeout = 48 
-idle-timeout = 900
-mobile-idle-timeout = 1024
-cookie-timeout = 32400
-persistent-cookies = false
-deny-roaming = false
 rekey-time = 86400
 rekey-method = ssl
-use-utmp = true
+deny-roaming = false
+# mtu = 1406
+try-mtu-discovery = true
+output-buffer = 0
+compression = false
+no-compress-limit = 256
+use-utmp = false
 use-occtl = true
 device = ocserv
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 dtls-psk = false
-cisco-client-compat = false
+cisco-client-compat = true
 tunnel-all-dns = true
 isolate-workers = false
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-RSA:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
+
+listen-host = 0.0.0.0
 ipv4-network = 192.168.8.0
 ipv4-netmask = 255.255.255.0
 dns = 192.168.8.1
+
+route-add-cmd = "ip route add %{R} dev %{D}"
