--- a/Anyconnect/openwrt/mosdns_v4.yml
+++ b/Anyconnect/openwrt/mosdns_v4.yml
@@ -1,34 +1,20 @@
-# 服务器设置
-servers:
-  - exec:                  main_sequence
-    listeners:
-      - protocol:          udp
-        addr:              :5335
-      - protocol:          tcp
-        addr:              :5335
-
-#调试api
-api:
-  http: "172.16.0.3:8080"
-
 # 日志设置
 log:
-  level: warn
-  file: "/tmp/mosdns.txt"
+  level:                   error
+  file:                    /tmp/mosdns.txt
 
 # 数据源设置
 data_providers:
-
   - tag:                   cmlist
     file:                  "./rule/cm_list.txt"
     auto_reload:           true
 
   - tag:                   geosite
-    file:                  "./rule/geosite.dat"
+    file:                  "/usr/share/v2ray/geosite.dat"
     auto_reload:           true
 
   - tag:                   geoip
-    file:                  "./rule/geoip.dat"
+    file:                  "/usr/share/v2ray/geoip.dat"
     auto_reload:           true
 
   - tag:                   adlist
@@ -46,11 +32,7 @@ data_providers:
   - tag:                   blocklist
     file:                  "./rule/blocklist.txt"
     auto_reload:           true
-
-  - tag:                   local_ptr
-    file:                  "./rule/local-ptr.txt"
-    auto_reload:           true
-    
+ 
   - tag:                   redirect
     file:                  "./rule/redirect.txt"
     auto_reload:           true
@@ -68,7 +50,7 @@ plugins:
     args:
       domain:
             - "provider:cmlist"
-
+            - "provider:geosite:gfw"
 
   - tag:                   "query_is_whitelist_domain"
     type:                  query_matcher
@@ -81,12 +63,6 @@ plugins:
     args:
       domain:
             - "provider:blocklist"
-
-  - tag:                   "query_is_gfw_domain"
-    type:                  query_matcher
-    args:
-      domain:
-        - "provider:geosite:gfw"
 
   - tag:                   "query_is_local_domain"
     type:                  query_matcher
@@ -104,13 +80,6 @@ plugins:
     type:                  query_matcher
     args:
       qtype:               [65]
-
-  - tag:                   "query_is_local_ptr"
-    type:                  query_matcher
-    args:
-      qtype:               [12]
-      domain:
-        - "provider:local_ptr"
 
   - tag:                   "query_is_ad_domain"
     type:                  query_matcher
@@ -136,43 +105,42 @@ plugins:
       rule:
           - "provider:redirect"
 
+  - tag:                   "reverse"
+    type:                  "reverse_lookup"
+    args:
+      size:                65535
+      ttl:                 1800
+      handle_ptr:          true 
+
   - tag:                   "lazy_cache"
     type:                  cache
     args:
-      size:                51200
-      lazy_cache_ttl:      360000
-      redis: "redis://172.16.0.2:6379/0"
-      redis_timeout: 100
-      cache_everything: true
-
+      size:                512000
+      lazy_cache_ttl:      259200
 
   - tag:                   "forward_local"
     type:                  fast_forward
     args:
       upstream:
-        - addr:            211.139.5.29         
-        - addr:            211.139.5.30
+        - addr:            119.29.29.29
+        - addr:            101.226.4.6
 
   - tag:                   "forward_remote"
     type:                  fast_forward
     args:
       upstream:
-        - addr:            8.8.8.8
-        - addr:            1.1.1.1
-
-  - tag:                   "forward_global"
-    type:                  fast_forward
-    args:
-      upstream:
-        - addr:            223.5.5.5
-        - addr:            119.29.29.29
+        - addr:            tls://8.8.4.4
+          enable_pipeline: true
+        - addr:            tls://9.9.9.9
+          enable_pipeline: true
 
   - tag:                   main_sequence
     type:                  sequence
     args:
       exec:
-        - lazy_cache
         - _misc_optm
+        - reverse
+        - lazy_cache
         - query_is_hosts_domain
         - query_is_redirect_domain
         - _no_ecs
@@ -180,22 +148,13 @@ plugins:
           exec:
             - forward_local
             - _return
-        - if:              "query_is_blocklist_domain || query_is_ad_domain || query_is_qtype65 || query_is_local_ptr"
+        - if:              "query_is_blocklist_domain || query_is_ad_domain || query_is_qtype65"
           exec:
             - _new_nxdomain_response
             - _return
-
-        - if:              "query_is_gfw_domain"
-          exec:
-            - _prefer_ipv4
-            - forward_remote
-            - gfw_to_ipset
-            - _return
-
         - if:              "query_is_local_domain"
           exec:
             - forward_local
-            - lazy_cache
             - _return
         - if:              "query_is_cmlist_domain"
           exec:
@@ -203,11 +162,10 @@ plugins:
             - forward_remote
             - gfw_to_ipset
             - _return
-
         - if:              "query_is_non_local_domain"
           exec:
             - _prefer_ipv4
-            - forward_global
+            - forward_remote
             - _return
         - primary:
             - forward_local
@@ -217,5 +175,14 @@ plugins:
           secondary:
             - _prefer_ipv4
             - forward_remote
-          fast_fallback:   200
+          fast_fallback:   150
           always_standby:  true
+
+# 服务器设置
+servers:
+  - exec:                  main_sequence
+    listeners:
+      - protocol:          udp
+        addr:              127.0.0.1:5335
+      - protocol:          tcp
+        addr:              127.0.0.1:5335
