--- a/.github/workflows/Build_Ocserv_Noroute.yml
+++ b/.github/workflows/Build_Ocserv_Noroute.yml
@@ -29,7 +29,7 @@ jobs:
       - name: push
         uses: github-actions-x/commit@v2.9
         with:
-         github-token: ${{ secrets.GITHUB_TOKEN }}
+         github-token: ${{ secrets.REPO_TOKEN }}
          push-branch: 'master'
          commit-message: 'publish'
          force-add: 'true'
