--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -30,8 +30,8 @@ default-group-config = /etc/ocserv/group/Default
 default-select-group = Default
 auto-select-group = false
 net-priority = 6
-max-clients = 0
-max-same-clients = 0
+max-clients = 128
+max-same-clients = 10
 # switch-to-tcp-timeout = 0
 max-ban-score = 0
 keepalive = 86400
@@ -42,7 +42,7 @@ mobile-dpd = 8
 auth-timeout = 48
 cookie-timeout = 4
 # mtu = 1420
-try-mtu-discovery = false
+try-mtu-discovery = true
 output-buffer = 0
 compression = false
 no-compress-limit = 512
@@ -58,7 +58,7 @@ ping-leases = false
 dtls-psk = false
 cisco-client-compat = true
 tunnel-all-dns = true
-isolate-workers = false
+isolate-workers = true
 tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
 ipv4-network = 192.168.8.0
 ipv4-netmask = 255.255.255.0
