--- a/Anyconnect/ocserv/ocserv.conf
+++ b/Anyconnect/ocserv/ocserv.conf
@@ -18,9 +18,9 @@ server-cert = /etc/ocserv/server.cert.pem
 server-key = /etc/ocserv/server.key.pem
 ca-cert = /etc/ocserv/ca.cert.pem
 
-socket-file = /var/run/ocserv.socket
-occtl-socket-file = /var/run/occtl.socket
-pid-file = /var/run/ocserv.pid
+socket-file = /run/ocserv.socket
+occtl-socket-file = /run/occtl.socket
+pid-file = /run/ocserv.pid
 run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
@@ -32,19 +32,22 @@ auto-select-group = false
 net-priority = 6
 max-clients = 128
 max-same-clients = 10
-# switch-to-tcp-timeout = 0
-max-ban-score = 0
-keepalive = 86400
-dpd = 3
-mobile-dpd = 8
-# idle-timeout = 32
-# mobile-idle-timeout = 32
-auth-timeout = 48
+# switch-to-tcp-timeout = 25
+# server-stats-reset-time = 604800
+max-ban-score = 80
+# ban-reset-time = 300
+keepalive = 300
+dpd = 60
+mobile-dpd = 300
+# idle-timeout = 1200
+# mobile-idle-timeout = 1200
+# min-reauth-time = 300
+auth-timeout = 60
 cookie-timeout = 4
 # mtu = 1420
 try-mtu-discovery = true
 output-buffer = 0
-compression = false
+compression = true
 no-compress-limit = 512
 persistent-cookies = false
 deny-roaming = false
@@ -53,9 +56,10 @@ rekey-method = ssl
 use-utmp = false
 use-occtl = true
 device = ocserv
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 dtls-psk = false
+dtls-legacy = true
 cisco-client-compat = true
 tunnel-all-dns = true
 isolate-workers = true
