--- a/Anyconnect/ocserv/ocserv_update.conf
+++ b/Anyconnect/ocserv/ocserv_update.conf
@@ -104,7 +104,7 @@ log-level = 2
 
 device = vpns
 predictable-ips = true
-#default-domain = "example.com one.example.com"
+default-domain = src
 
 ipv4-network = 192.168.1.0/24
 ipv6-network = fda9:4efe:7e3b:03ea::/48
