--- a/Anyconnect/ocserv/ocserv_update.conf
+++ b/Anyconnect/ocserv/ocserv_update.conf
@@ -1,169 +1,100 @@
-#auth = "pam"
-#auth = "pam[gid-min=1000]"
-#auth = "plain[passwd=./sample.passwd,otp=./sample.otp]"
-auth = "plain[passwd=./sample.passwd]"
-#auth = "certificate"
-#auth = "radius[config=/etc/radiusclient/radiusclient.conf,groupconfig=true]"
+auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 enable-auth = "certificate"
-#enable-auth = "gssapi"
-#enable-auth = "gssapi[keytab=/etc/key.tab,require-local-user-map=true,tgt-freshness-time=900]"
-#acct = "radius[config=/etc/radiusclient/radiusclient.conf]"
+cert-user-oid = 2.5.4.3
+cert-group-oid = 2.5.4.11
 
-#listen-host = [IP|HOSTNAME]
-#udp-listen-host = [IP|HOSTNAME]
-#listen-host-is-dyndns = true
-# listen-netns = "foo"
-
-# TCP and UDP port number
 tcp-port = 443
 udp-port = 443
 
-run-as-user = nobody
-run-as-group = daemon
 occtl-socket-file = /var/run/occtl.socket
 socket-file = /var/run/ocserv-socket
+pid-file = /var/run/ocserv.pid
 
-#chroot-dir = /var/lib/ocserv
-
-ca-cert = ../tests/certs/ca.pem
+ca-cert = /etc/ocserv/ca.cert.pem
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 dh-params = /etc/ocserv/dh.pem
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
 
-#pin-file = /etc/ocserv/pin.txt
-#srk-pin-file = /etc/ocserv/srkpin.txt
-
-#key-pin = 1234
-#srk-pin = 1234
-#sec-mod-scale = 4
-isolate-workers = true
-
-#banner = "Welcome"
-#pre-login-banner = "Welcome"
+auto-select-group = true
+config-per-group = /etc/ocserv/group
+default-group-config = /etc/ocserv/group/Default
+default-select-group = Default
+user-profile = /etc/ocserv/profile.xml
 
 max-clients = 1024
 max-clients = 16
 max-same-clients = 2
-
-#listen-proxy-proto = true
+run-as-user = nobody
+run-as-group = daemon
 rate-limit-ms = 100
+net-priority = 6
 #stats-report-time = 360
-
+isolate-workers = true
 server-stats-reset-time = 604800
-keepalive = 32400
-dpd = 90
-mobile-dpd = 1800
+keepalive = 300
+dpd = 60
+mobile-dpd = 300
 switch-to-tcp-timeout = 25
-try-mtu-discovery = false
+try-mtu-discovery = true
 #server-drain-ms = 15000
-#ocsp-response = /etc/ocserv/ocsp.der
-
-cert-user-oid = 2.5.4.3
-cert-group-oid = 2.5.4.11
-
-
-#crl = /etc/ocserv/crl.pem
-#compression = false
-#no-compress-limit = 256
-
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-
-
+compression = true
+no-compress-limit = 256
 #match-tls-dtls-ciphers = true
-auth-timeout = 240
+auth-timeout = 60
 #idle-timeout = 1200
 #session-timeout = 86400
 #mobile-idle-timeout = 2400
 min-reauth-time = 300
 max-ban-score = 80
-
-
 ban-reset-time = 1200
 #ban-points-wrong-password = 10
 #ban-points-connection = 1
 #ban-points-kkdcp = 1
 
-cookie-timeout = 300
-#persistent-cookies = true
+cookie-timeout = 4
+persistent-cookies = false
 deny-roaming = false
-rekey-time = 172800
+rekey-time = 86400
 rekey-method = ssl
 
-#connect-script = /usr/bin/myscript
-#disconnect-script = /usr/bin/myscript
-#host-update-script = /usr/bin/myhostnamescript
 
-#use-utmp = true
+use-utmp = true
 use-occtl = true
-pid-file = /var/run/ocserv.pid
-log-level = 2
-#net-priority = 3
-#cgroup = "cpuset,cpu:test"
 
 
-device = vpns
+device = ocserv
 predictable-ips = true
 default-domain = src
 
-ipv4-network = 192.168.1.0/24
-ipv6-network = fda9:4efe:7e3b:03ea::/48
-ipv6-subnet-prefix = 128
-
-
-#tunnel-all-dns = true
-dns = 192.168.1.2
-
-#nbns = 192.168.1.3
-#split-dns = example.com
 ping-leases = false
 #mtu = 1420
 
 #rx-data-per-sec = 40000
 #tx-data-per-sec = 40000
-#output-buffer = 10
-
-# Routes to be forwarded to the client. If you need the
-# client to forward routes to the server, you may use the
-# config-per-user/group or even connect and disconnect scripts.
-#
-# To set the server as the default gateway for the client just
-# comment out all routes from the server, or use the special keyword
-# 'default'.
-
-route = 10.10.10.0/255.255.255.0
-route = 192.168.0.0/255.255.0.0
-#route = fef4:db8:1000:1001::/64
-#route = default
-
-# Subsets of the routes above that will not be routed by
-# the server.
-
-no-route = 192.168.5.0/255.255.255.0
+output-buffer = 10
 
 
-
-#default-select-group = DEFAULT
-#auto-select-group = true
-
-#default-user-config = /etc/ocserv/defaults/user.conf
-#default-group-config = /etc/ocserv/defaults/group.conf
-
-
-#proxy-url = http://example.com/
-#proxy-url = http://example.com/%{U}/
-
-#user-profile = profile.xml
 
 cisco-client-compat = true
-#dtls-psk = false
-dtls-legacy = true
+dtls-psk = false
+dtls-legacy = false
+tunnel-all-dns = true
 cisco-svc-client-compat = false
 client-bypass-protocol = false
-camouflage = false
 
+ipv4-network = 192.168.1.0/24
+ipv6-network = fda9:4efe:7e3b:03ea::/48
+ipv6-subnet-prefix = 128
+dns = 192.168.1.2
+
+camouflage = false
 camouflage_secret = "mysecretkey"
 camouflage_realm = "Restricted Content"
+
+#banner = "Welcome"
+#pre-login-banner = "Welcome"
 
 # HTTP headers
 included-http-headers = Strict-Transport-Security: max-age=31536000 ; includeSubDomains
