--- a/Anyconnect/ocserv/ocserv_update.conf
+++ b/Anyconnect/ocserv/ocserv_update.conf
@@ -89,6 +89,7 @@ ipv6-network = fda9:4efe:7e3b:03ea::/48
 ipv6-subnet-prefix = 128
 dns = 192.168.1.2
 
+# HTTP camouflage
 camouflage = false
 camouflage_secret = "mysecretkey"
 camouflage_realm = "Restricted Content"
