--- a/Anyconnect/ocserv/ocserv_update.conf
+++ b/Anyconnect/ocserv/ocserv_update.conf
@@ -76,6 +76,7 @@ client-bypass-protocol = false
 ipv4-network = 192.168.8.0/24
 ipv6-network = fda9:4efe:7e3b:03ea::/48
 ipv6-subnet-prefix = 128
+# dns = fc00::4be0
 dns = 192.168.1.2
 
 # HTTP camouflage
