--- a/Anyconnect/ocserv/ocserv_update.conf
+++ b/Anyconnect/ocserv/ocserv_update.conf
@@ -68,7 +68,7 @@ output-buffer = 0
 
 cisco-client-compat = true
 dtls-psk = false
-dtls-legacy = false
+dtls-legacy = true
 tunnel-all-dns = true
 cisco-svc-client-compat = false
 client-bypass-protocol = false
