--- a/gost/gost.service
+++ b/gost/gost.service
@@ -5,7 +5,7 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/gost -c /etc/gost/config.yaml
+ExecStart=/usr/local/bin/gost -C /etc/gost/config.yaml
 Restart=always
 
 [Install]
