--- a/AnyConnect/ocserv/ocserv_update.conf
+++ b/AnyConnect/ocserv/ocserv_update.conf
@@ -83,6 +83,11 @@ camouflage_realm = "Restricted Content"
 #banner = "Welcome"
 #pre-login-banner = "Welcome"
 
+
+#site to site
+route-add-cmd = "ip route add %{R} dev %{D}"
+route-del-cmd = "ip route delete %{R} dev %{D}"
+
 # HTTP headers
 included-http-headers = Strict-Transport-Security: max-age=31536000 ; includeSubDomains
 included-http-headers = X-Frame-Options: deny
