--- a/AnyConnect/ocserv/ocserv.conf
+++ b/AnyConnect/ocserv/ocserv.conf
@@ -85,7 +85,7 @@ ping-leases = false
 #restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
 #restrict-user-to-ports = "!(tcp(443), tcp(80))"
 #default-select-group = DEFAULT
-auto-select-group = true
+auto-select-group = false
 #user-profile = profile.xml
 cisco-client-compat = true
 #dtls-psk = false
