--- a/AnyConnect/ocserv/ocserv.conf
+++ b/AnyConnect/ocserv/ocserv.conf
@@ -13,10 +13,10 @@ run-as-user = nobody
 run-as-group = daemon
 occtl-socket-file = /var/run/occtl.socket
 socket-file = /var/run/ocserv-socket
-server-cert = /etc/ocserv/server-cert.pem
-server-key = /etc/ocserv/server-key.pem
+server-cert = /etc/ocserv/server.cert.pem
+server-key = /etc/ocserv/server.key.pem
 dh-params = /etc/ocserv/dh.pem
-ca-cert = /etc/ocserv/ca.pem
+ca-cert = /etc/ocserv/ca.cert.pem
 isolate-workers = true
 banner = "Welcome"
 pre-login-banner = "Welcome"
