--- a/AnyConnect/ocserv/ocserv.conf
+++ b/AnyConnect/ocserv/ocserv.conf
@@ -84,8 +84,12 @@ ping-leases = false
 #restrict-user-to-routes = true
 #restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
 #restrict-user-to-ports = "!(tcp(443), tcp(80))"
-#default-select-group = DEFAULT
+default-select-group = Default
 auto-select-group = false
+config-per-group = /etc/ocserv/group
+#default-group-config = /etc/ocserv/group/Default
+#route-add-cmd = "ip route add %{R} dev %{D}"
+#route-del-cmd = "ip route delete %{R} dev %{D}"
 #user-profile = profile.xml
 cisco-client-compat = true
 #dtls-psk = false
