--- a/AnyConnect/ocserv/ocserv.conf
+++ b/AnyConnect/ocserv/ocserv.conf
@@ -1,116 +1,65 @@
 # Autorun ocserv
 # Append '@reboot root bash /etc/ocserv/ocserv.d >/dev/null 2>&1 &' in /etc/crontab
 
+# The default domain to be advertised
+# Connection-specific DNS suffixes
+default-domain = srv
+
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+#auth = "certificate"
+#enable-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 enable-auth = "certificate"
-#listen-host = [IP|HOSTNAME]
-#udp-listen-host = [IP|HOSTNAME]
-#listen-host-is-dyndns = true
-# listen-netns = "foo"
+
+# TCP and UDP port
 tcp-port = 443
-udp-port = 443
-run-as-user = nobody
-run-as-group = daemon
-occtl-socket-file = /var/run/occtl.socket
-socket-file = /var/run/ocserv-socket
+udp-port = 0
+
 server-cert = /etc/ocserv/server.cert.pem
 server-key = /etc/ocserv/server.key.pem
-dh-params = /etc/ocserv/dh.pem
 ca-cert = /etc/ocserv/ca.cert.pem
-isolate-workers = true
-banner = "Welcome"
-pre-login-banner = "Welcome"
-max-clients = 1024
-max-same-clients = 0
-#listen-proxy-proto = true
-rate-limit-ms = 100
-stats-report-time = 360
-server-stats-reset-time = 604800
-keepalive = 32400
-dpd = 90
-mobile-dpd = 1800
-switch-to-tcp-timeout = 25
-try-mtu-discovery = true
-#server-drain-ms = 15000
-#ocsp-response = /etc/ocserv/ocsp.der
-#  CN = 2.5.4.3, UID = 0.9.2342.19200300.100.1.1, SAN(rfc822name)
+
+socket-file = /var/run/ocserv.socket
+occtl-socket-file = /var/run/occtl.socket
+pid-file = /var/run/ocserv.pid
+run-as-user = nobody
+run-as-group = daemon
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
-#crl = /etc/ocserv/crl.pem
-#compression = false
-#no-compress-limit = 256
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
-#match-tls-dtls-ciphers = true
-auth-timeout = 240
-#idle-timeout = 1200
-#session-timeout = 86400
-#mobile-idle-timeout = 2400
-min-reauth-time = 300
-max-ban-score = 80
-ban-reset-time = 1200
-#ban-points-wrong-password = 10
-#ban-points-connection = 1
-#ban-points-kkdcp = 1
-cookie-timeout = 300
-#persistent-cookies = true
-deny-roaming = false
-rekey-time = 172800
-rekey-method = ssl
-#connect-script = /usr/bin/myscript
-#disconnect-script = /usr/bin/myscript
-#host-update-script = /usr/bin/myhostnamescript
-#use-utmp = true
-use-occtl = true
-pid-file = /var/run/ocserv.pid
-log-level = 2
-#net-priority = 3
-#cgroup = "cpuset,cpu:test"
-
-device = ocserv
-predictable-ips = true
-default-domain = srv 
-ipv4-network = 192.168.8.0/24
-#ipv6-network = fda9:4efe:7e3b:03ea::/48
-#ipv6-subnet-prefix = 64
-tunnel-all-dns = true
-dns = 192.168.8.1
-#nbns = 192.168.1.3
-#split-dns = example.com
-ping-leases = false
-#mtu = 1420
-#rx-data-per-sec = 40000
-#tx-data-per-sec = 40000
-#output-buffer = 10
-#restrict-user-to-routes = true
-#restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
-#restrict-user-to-ports = "!(tcp(443), tcp(80))"
+config-per-group = /etc/ocserv/group
+default-group-config = /etc/ocserv/group/Default
 default-select-group = Default
 auto-select-group = false
-config-per-group = /etc/ocserv/group
-#default-group-config = /etc/ocserv/group/Default
-#route-add-cmd = "ip route add %{R} dev %{D}"
-#route-del-cmd = "ip route delete %{R} dev %{D}"
-#user-profile = profile.xml
+net-priority = 6
+max-clients = 0
+max-same-clients = 0
+# switch-to-tcp-timeout = 0
+max-ban-score = 0
+keepalive = 86400
+dpd = 3
+mobile-dpd = 8
+# idle-timeout = 32
+# mobile-idle-timeout = 32
+auth-timeout = 48
+cookie-timeout = 4
+# mtu = 1420
+try-mtu-discovery = false
+output-buffer = 0
+compression = false
+no-compress-limit = 512
+persistent-cookies = false
+deny-roaming = false
+rekey-time = 86400
+rekey-method = ssl
+use-utmp = false
+use-occtl = true
+device = ocserv
+predictable-ips = false
+ping-leases = false
+dtls-psk = false
 cisco-client-compat = true
-#dtls-psk = false
-dtls-legacy = true
-cisco-svc-client-compat = false
-client-bypass-protocol = false
-camouflage = false
-camouflage_secret = "13595714161"
-camouflage_realm = "Restricted Content"
-#custom-header = "X-My-Header: hi there"
-# HTTP headers
-included-http-headers = Strict-Transport-Security: max-age=31536000 ; includeSubDomains
-included-http-headers = X-Frame-Options: deny
-included-http-headers = X-Content-Type-Options: nosniff
-included-http-headers = Content-Security-Policy: default-src 'none'
-included-http-headers = X-Permitted-Cross-Domain-Policies: none
-included-http-headers = Referrer-Policy: no-referrer
-included-http-headers = Clear-Site-Data: "cache","cookies","storage"
-included-http-headers = Cross-Origin-Embedder-Policy: require-corp
-included-http-headers = Cross-Origin-Opener-Policy: same-origin
-included-http-headers = Cross-Origin-Resource-Policy: same-origin
-included-http-headers = X-XSS-Protection: 0
-included-http-headers = Pragma: no-cache
-included-http-headers = Cache-control: no-store, no-cache
+tunnel-all-dns = true
+isolate-workers = false
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
+ipv4-network = 192.168.8.0
+ipv4-netmask = 255.255.255.0
+dns = 192.168.8.1
