--- a/AnyConnect/ocserv/ocserv.conf
+++ b/AnyConnect/ocserv/ocserv.conf
@@ -18,9 +18,10 @@ server-cert = /etc/ocserv/server.cert.pem
 server-key = /etc/ocserv/server.key.pem
 ca-cert = /etc/ocserv/ca.cert.pem
 
-socket-file = /var/run/ocserv.socket
-occtl-socket-file = /var/run/occtl.socket
-pid-file = /var/run/ocserv.pid
+chroot-dir = /var/run/
+socket-file = ocserv.socket
+occtl-socket-file = occtl.socket
+pid-file = ocserv.pid
 run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
