--- a/AnyConnect/ocserv/ocserv.conf
+++ b/AnyConnect/ocserv/ocserv.conf
@@ -18,12 +18,12 @@ server-cert = /etc/ocserv/server.cert.pem
 server-key = /etc/ocserv/server.key.pem
 ca-cert = /etc/ocserv/ca.cert.pem
 
-chroot-dir = /var/run/
-socket-file = ocserv.socket
-occtl-socket-file = occtl.socket
-pid-file = ocserv.pid
-run-as-user = nobody
-run-as-group = daemon
+#run-as-user = nobody
+#run-as-group = daemon
+socket-file = /var/run/ocserv.socket
+occtl-socket-file = /var/run/occtl.socket
+pid-file = /var/run/ocserv.pid
+
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
 config-per-group = /etc/ocserv/group
