--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -1,6 +1,3 @@
-# Autorun ocserv
-# Append '@reboot root bash /etc/ocserv/ocserv.d >/dev/null 2>&1 &' in /etc/crontab
-
 # The default domain to be advertised
 # Connection-specific DNS suffixes
 default-domain = srv
@@ -14,15 +11,16 @@ enable-auth = "certificate"
 tcp-port = 443
 udp-port = 0
 
-server-cert = /etc/ocserv/server.cert.pem
-server-key = /etc/ocserv/server.key.pem
-ca-cert = /etc/ocserv/ca.cert.pem
+run-as-user = nobody
+run-as-group = daemon
 
-#run-as-user = nobody
-#run-as-group = daemon
-socket-file = /var/run/ocserv.socket
-occtl-socket-file = /var/run/occtl.socket
-pid-file = /var/run/ocserv.pid
+server-cert = /etc/ocserv/server.crt.pem
+server-key = /etc/ocserv/server.key.pem
+ca-cert = /etc/ocserv/ca.crt.pem
+
+socket-file = /run/ocserv.socket
+occtl-socket-file = /run/occtl.socket
+pid-file = /run/ocserv.pid
 
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
@@ -30,37 +28,40 @@ config-per-group = /etc/ocserv/group
 default-group-config = /etc/ocserv/group/Default
 default-select-group = Default
 auto-select-group = false
+
 net-priority = 6
 max-clients = 0
 max-same-clients = 0
 # switch-to-tcp-timeout = 0
 max-ban-score = 0
-keepalive = 86400
+min-reauth-time = 1
 dpd = 3
-mobile-dpd = 8
-# idle-timeout = 32
+idle-timeout = 8
+# mobile-dpd = 8
 # mobile-idle-timeout = 32
-auth-timeout = 48
-cookie-timeout = 4
-# mtu = 1420
-try-mtu-discovery = false
-output-buffer = 0
-compression = false
-no-compress-limit = 512
-persistent-cookies = false
-deny-roaming = false
+persistent-cookies = true
+cookie-timeout = 256
+keepalive = 32
+auth-timeout = 64
 rekey-time = 86400
 rekey-method = ssl
-use-utmp = false
+deny-roaming = false
+mtu = 1412
+try-mtu-discovery = true
+output-buffer = 0
+compression = false
+no-compress-limit = 256
+use-utmp = true
 use-occtl = true
 device = ocserv
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 dtls-psk = false
 cisco-client-compat = true
 tunnel-all-dns = true
 isolate-workers = false
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
-ipv4-network = 192.168.8.0
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2:+VERS-TLS1.3"
+
+ipv4-network = 10.0.254.0
 ipv4-netmask = 255.255.255.0
-dns = 192.168.8.1
+dns = 10.0.254.1
