--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -1,67 +1,145 @@
-# The default domain to be advertised
-# Connection-specific DNS suffixes
-default-domain = srv
 
-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+#auth = "pam"
+#auth = "pam[gid-min=1000]"
+#auth = "plain[passwd=./sample.passwd,otp=./sample.otp]"
+auth = "plain[passwd=./sample.passwd]"
 #auth = "certificate"
-#enable-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
-enable-auth = "certificate"
+#auth = "radius[config=/etc/radiusclient/radiusclient.conf,groupconfig=true]"
 
-# TCP and UDP port
+enable-auth = "certificate"
+#enable-auth = "gssapi"
+#enable-auth = "gssapi[keytab=/etc/key.tab,require-local-user-map=true,tgt-freshness-time=900]"
+#acct = "radius[config=/etc/radiusclient/radiusclient.conf]"
+
+#listen-host = [IP|HOSTNAME]
+#udp-listen-host = [IP|HOSTNAME]
+#listen-host-is-dyndns = true
+# listen-netns = "foo"
+
 tcp-port = 443
-udp-port = 0
+udp-port = 443
 
 run-as-user = nobody
 run-as-group = daemon
 
-server-cert = /etc/ocserv/server.crt.pem
-server-key = /etc/ocserv/server.key.pem
-ca-cert = /etc/ocserv/ca.crt.pem
+#occtl-socket-file = /var/run/occtl.socket
+socket-file = /var/run/ocserv-socket
+#chroot-dir = /var/lib/ocserv
 
-socket-file = /run/ocserv.socket
-occtl-socket-file = /run/occtl.socket
-pid-file = /run/ocserv.pid
+server-cert = /etc/ocserv/server-cert.pem
+server-key = /etc/ocserv/server-key.pem
+#dh-params = /etc/ocserv/dh.pem
+ca-cert = /etc/ocserv/ca.pem
+
+#pin-file = /etc/ocserv/pin.txt
+#srk-pin-file = /etc/ocserv/srkpin.txt
+
+#key-pin = 1234
+#srk-pin = 1234
+#sec-mod-scale = 4
+
+isolate-workers = true
+#banner = "Welcome"
+#pre-login-banner = "Welcome"
+max-clients = 16
+max-same-clients = 2
+#listen-proxy-proto = true
+rate-limit-ms = 100
+#stats-report-time = 360
+server-stats-reset-time = 604800
+keepalive = 32400
+dpd = 90
+mobile-dpd = 1800
+switch-to-tcp-timeout = 25
+try-mtu-discovery = false
+#server-drain-ms = 15000
+#ocsp-response = /etc/ocserv/ocsp.der
 
 cert-user-oid = 2.5.4.3
-cert-group-oid = 2.5.4.11
-config-per-group = /etc/ocserv/group
-default-group-config = /etc/ocserv/group/Default
-default-select-group = Default
-auto-select-group = false
-
-net-priority = 6
-max-clients = 0
-max-same-clients = 0
-# switch-to-tcp-timeout = 0
-max-ban-score = 0
-min-reauth-time = 1
-dpd = 3
-idle-timeout = 8
-# mobile-dpd = 8
-# mobile-idle-timeout = 32
-persistent-cookies = true
-cookie-timeout = 256
-keepalive = 32
-auth-timeout = 64
-rekey-time = 86400
-rekey-method = ssl
+#cert-group-oid = 2.5.4.11
+#crl = /etc/ocserv/crl.pem
+#compression = false
+#no-compress-limit = 256
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1"
+#match-tls-dtls-ciphers = true
+auth-timeout = 240
+#idle-timeout = 1200
+#session-timeout = 86400
+#mobile-idle-timeout = 2400
+max-ban-score = 80
+ban-time = 300
+ban-reset-time = 1200
+#ban-points-wrong-password = 10
+#ban-points-connection = 1
+#ban-points-kkdcp = 1
+cookie-timeout = 300
+#persistent-cookies = true
 deny-roaming = false
-mtu = 1412
-try-mtu-discovery = true
-output-buffer = 0
-compression = false
-no-compress-limit = 256
-use-utmp = true
+rekey-time = 172800
+rekey-method = ssl
+#connect-script = /usr/bin/myscript
+#disconnect-script = /usr/bin/myscript
+#host-update-script = /usr/bin/myhostnamescript
+#use-utmp = true
 use-occtl = true
-device = ocserv
+pid-file = /var/run/ocserv.pid
+log-level = 2
+#net-priority = 3
+device = vpns
 predictable-ips = true
-ping-leases = false
-dtls-psk = false
-cisco-client-compat = true
-tunnel-all-dns = true
-isolate-workers = false
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-ALL:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2:+VERS-TLS1.3"
+default-domain = example.com
+#default-domain = "example.com one.example.com"
 
-ipv4-network = 10.0.254.0
-ipv4-netmask = 255.255.255.0
-dns = 10.0.254.1
+ipv4-network = 192.168.1.0/24
+ipv6-network = fda9:4efe:7e3b:03ea::/64
+
+#tunnel-all-dns = true
+dns = 192.168.1.2
+#nbns = 192.168.1.3
+#split-dns = example.com
+ping-leases = false
+#mtu = 1420
+#rx-data-per-sec = 40000
+#tx-data-per-sec = 40000
+#output-buffer = 10
+#restrict-user-to-routes = true
+#restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
+#restrict-user-to-ports = "!(tcp(443), tcp(80))"
+#expose-iroutes = true
+#select-group-by-url = false
+#default-select-group = DEFAULT
+#auto-select-group = true
+#config-per-user = /etc/ocserv/config-per-user/
+#config-per-group = /etc/ocserv/config-per-group/
+#default-user-config = /etc/ocserv/defaults/user.conf
+#default-group-config = /etc/ocserv/defaults/group.conf
+#route-add-cmd = "ip route add %{R} dev %{D}"
+#route-del-cmd = "ip route delete %{R} dev %{D}"
+#proxy-url = http://example.com/
+#proxy-url = http://example.com/%{U}/
+
+#user-profile = profile.xml
+cisco-client-compat = true
+#dtls-psk = false
+dtls-legacy = true
+cisco-svc-client-compat = false
+client-bypass-protocol = false
+camouflage = false
+camouflage_secret = "mysecretkey"
+camouflage_realm = "Restricted Content"
+
+#custom-header = "X-My-Header: hi there"
+# HTTP headers
+included-http-headers = Strict-Transport-Security: max-age=31536000 ; includeSubDomains
+included-http-headers = X-Frame-Options: deny
+included-http-headers = X-Content-Type-Options: nosniff
+included-http-headers = Content-Security-Policy: default-src 'none'
+included-http-headers = X-Permitted-Cross-Domain-Policies: none
+included-http-headers = Referrer-Policy: no-referrer
+included-http-headers = Clear-Site-Data: "cache","cookies","storage"
+included-http-headers = Cross-Origin-Embedder-Policy: require-corp
+included-http-headers = Cross-Origin-Opener-Policy: same-origin
+included-http-headers = Cross-Origin-Resource-Policy: same-origin
+included-http-headers = X-XSS-Protection: 0
+included-http-headers = Pragma: no-cache
+included-http-headers = Cache-control: no-store, no-cache
