--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -90,8 +90,8 @@ predictable-ips = true
 default-domain = example.com
 #default-domain = "example.com one.example.com"
 
-ipv4-network = 192.168.1.0/24
-ipv6-network = fda9:4efe:7e3b:03ea::/64
+ipv4-network = 192.168.144.0/24
+#ipv6-network = fda9:4efe:7e3b:03ea::/64
 
 #tunnel-all-dns = true
 dns = 192.168.1.2
