--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -17,7 +17,7 @@ enable-auth = "certificate"
 # listen-netns = "foo"
 
 tcp-port = 443
-udp-port = 443
+#udp-port = 443
 
 run-as-user = nobody
 run-as-group = daemon
@@ -56,11 +56,11 @@ try-mtu-discovery = false
 #ocsp-response = /etc/ocserv/ocsp.der
 
 cert-user-oid = 2.5.4.3
-#cert-group-oid = 2.5.4.11
+cert-group-oid = 2.5.4.11
 #crl = /etc/ocserv/crl.pem
 #compression = false
 #no-compress-limit = 256
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1"
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
 #match-tls-dtls-ciphers = true
 auth-timeout = 240
 #idle-timeout = 1200
@@ -106,13 +106,15 @@ ping-leases = false
 #restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
 #restrict-user-to-ports = "!(tcp(443), tcp(80))"
 #expose-iroutes = true
-#select-group-by-url = false
-#default-select-group = DEFAULT
-#auto-select-group = true
-#config-per-user = /etc/ocserv/config-per-user/
-#config-per-group = /etc/ocserv/config-per-group/
+
+select-group-by-url = false
+default-select-group = DEFAULT
+auto-select-group = true
+config-per-user = /etc/ocserv/config-per-user/
+config-per-group = /etc/ocserv/config-per-group/
 #default-user-config = /etc/ocserv/defaults/user.conf
 #default-group-config = /etc/ocserv/defaults/group.conf
+
 #route-add-cmd = "ip route add %{R} dev %{D}"
 #route-del-cmd = "ip route delete %{R} dev %{D}"
 #proxy-url = http://example.com/
