--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -1,8 +1,8 @@
 
 #auth = "pam"
 #auth = "pam[gid-min=1000]"
-#auth = "plain[passwd=./sample.passwd,otp=./sample.otp]"
-auth = "plain[passwd=./sample.passwd]"
+#auth = "plain[passwd=/etc/ocserv/passwd,otp=./sample.otp]"
+auth = "plain[passwd=/etc/ocserv/passwd]"
 #auth = "certificate"
 #auth = "radius[config=/etc/radiusclient/radiusclient.conf,groupconfig=true]"
 
