--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -28,8 +28,8 @@ socket-file = /var/run/ocserv-socket
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
-#dh-params = /etc/ocserv/dh.pem
-ca-cert = /etc/ocserv/ca.pem
+dh-params = /etc/ocserv/server-dh.pem
+ca-cert = /etc/ocserv/server-ca.pem
 
 #pin-file = /etc/ocserv/pin.txt
 #srk-pin-file = /etc/ocserv/srkpin.txt
