--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -67,7 +67,7 @@ auth-timeout = 240
 #session-timeout = 86400
 #mobile-idle-timeout = 2400
 max-ban-score = 80
-ban-time = 300
+#ban-time = 300
 ban-reset-time = 1200
 #ban-points-wrong-password = 10
 #ban-points-connection = 1
