--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -98,7 +98,7 @@ dns = 192.168.1.2
 #nbns = 192.168.1.3
 #split-dns = example.com
 ping-leases = false
-#mtu = 1300
+mtu = 1420
 #rx-data-per-sec = 40000
 #tx-data-per-sec = 40000
 #output-buffer = 10
