--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -17,7 +17,7 @@ enable-auth = "certificate"
 # listen-netns = "foo"
 
 tcp-port = 443
-#udp-port = 443
+udp-port = 443
 
 run-as-user = nobody
 run-as-group = daemon
@@ -36,7 +36,7 @@ ca-cert = /etc/ocserv/server-ca.pem
 
 #key-pin = 1234
 #srk-pin = 1234
-#sec-mod-scale = 4
+sec-mod-scale = 1
 
 isolate-workers = true
 #banner = "Welcome"
@@ -44,24 +44,24 @@ isolate-workers = true
 max-clients = 16
 max-same-clients = 2
 #listen-proxy-proto = true
-rate-limit-ms = 100
+rate-limit-ms = 0
 #stats-report-time = 360
 server-stats-reset-time = 604800
 keepalive = 32400
-dpd = 90
+dpd = 60
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
-try-mtu-discovery = false
+try-mtu-discovery = true
 #server-drain-ms = 15000
 #ocsp-response = /etc/ocserv/ocsp.der
 
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
 #crl = /etc/ocserv/crl.pem
-#compression = false
+compression = false
 #no-compress-limit = 256
-tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
-#match-tls-dtls-ciphers = true
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:+VERS-TLS1.3"
+match-tls-dtls-ciphers = true
 auth-timeout = 240
 #idle-timeout = 1200
 #session-timeout = 86400
@@ -101,7 +101,7 @@ ping-leases = false
 mtu = 1420
 #rx-data-per-sec = 40000
 #tx-data-per-sec = 40000
-#output-buffer = 10
+output-buffer = 50
 #restrict-user-to-routes = true
 #restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
 #restrict-user-to-ports = "!(tcp(443), tcp(80))"
