--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -60,7 +60,10 @@ cert-group-oid = 2.5.4.11
 #crl = /etc/ocserv/crl.pem
 compression = false
 #no-compress-limit = 256
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:+VERS-TLS1.3"
+#  默认配置
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:+VERS-TLS1.3"
+#  根据gnutls-cli --benchmark-tls-ciphers计算结果定制
+tls-priorities = "NONE:+VERS-TLS1.3:+VERS-TLS1.2:+ECDHE-RSA:+ECDHE-ECDSA:+AES-128-GCM:+AES-256-GCM:+CHACHA20-POLY1305:+SIGN-ALL:+COMP-NULL:+GROUP-ALL"
 match-tls-dtls-ciphers = true
 auth-timeout = 240
 #idle-timeout = 1200
@@ -101,7 +104,7 @@ ping-leases = false
 mtu = 1420
 #rx-data-per-sec = 40000
 #tx-data-per-sec = 40000
-output-buffer = 50
+output-buffer = 30
 #restrict-user-to-routes = true
 #restrict-user-to-ports = "tcp(443), tcp(80), udp(443), sctp(99), tcp(583), icmp(), icmpv6()"
 #restrict-user-to-ports = "!(tcp(443), tcp(80))"
