--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -60,11 +60,9 @@ cert-group-oid = 2.5.4.11
 #crl = /etc/ocserv/crl.pem
 compression = false
 #no-compress-limit = 256
-#  默认配置
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:+VERS-TLS1.3"
-#  根据gnutls-cli --benchmark-tls-ciphers计算结果定制
-tls-priorities = "NONE:+VERS-TLS1.3:+VERS-TLS1.2:+ECDHE-RSA:+ECDHE-ECDSA:+AES-128-GCM:+AES-256-GCM:+CHACHA20-POLY1305:+SIGN-ALL:+COMP-NULL:+GROUP-ALL"
-match-tls-dtls-ciphers = true
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:-VERS-ALL:+VERS-TLS1.2:+VERS-TLS1.3:-ARCFOUR-128"
+#match-tls-dtls-ciphers = true
 auth-timeout = 240
 #idle-timeout = 1200
 #session-timeout = 86400
