--- a/Ocserv/ocserv/ocserv.conf
+++ b/Ocserv/ocserv/ocserv.conf
@@ -38,11 +38,11 @@ ca-cert = /etc/ocserv/server-ca.pem
 #srk-pin = 1234
 sec-mod-scale = 1
 
-isolate-workers = true
+isolate-workers = false
 #banner = "Welcome"
 #pre-login-banner = "Welcome"
-max-clients = 16
-max-same-clients = 2
+max-clients = 0
+max-same-clients = 0
 #listen-proxy-proto = true
 rate-limit-ms = 0
 #stats-report-time = 360
@@ -54,16 +54,14 @@ switch-to-tcp-timeout = 25
 try-mtu-discovery = true
 #server-drain-ms = 15000
 #ocsp-response = /etc/ocserv/ocsp.der
-
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
 #crl = /etc/ocserv/crl.pem
 compression = false
-#no-compress-limit = 256
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:+VERS-TLS1.3"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:-VERS-ALL:+VERS-TLS1.2:+VERS-TLS1.3:-ARCFOUR-128"
+no-compress-limit = 512
+tls-priorities = "PERFORMANCE:%SERVER_PRECEDENCE:%COMPAT:-VERS-TLS-ALL:-VERS-DTLS-ALL:-RSA:-VERS-SSL3.0:-ARCFOUR-128:+VERS-TLS1.2"
 #match-tls-dtls-ciphers = true
-auth-timeout = 240
+auth-timeout = 60
 #idle-timeout = 1200
 #session-timeout = 86400
 #mobile-idle-timeout = 2400
@@ -73,28 +71,27 @@ ban-reset-time = 1200
 #ban-points-wrong-password = 10
 #ban-points-connection = 1
 #ban-points-kkdcp = 1
-cookie-timeout = 300
-#persistent-cookies = true
+cookie-timeout = 30
+persistent-cookies = false
 deny-roaming = false
-rekey-time = 172800
+rekey-time = 86400
 rekey-method = ssl
 #connect-script = /usr/bin/myscript
 #disconnect-script = /usr/bin/myscript
 #host-update-script = /usr/bin/myhostnamescript
-#use-utmp = true
+use-utmp = false
 use-occtl = true
 pid-file = /var/run/ocserv.pid
 log-level = 2
-#net-priority = 3
+net-priority = 6
 device = vpns
-predictable-ips = true
-default-domain = example.com
-#default-domain = "example.com one.example.com"
+predictable-ips = false
+default-domain = srv
 
 ipv4-network = 192.168.144.0/24
 #ipv6-network = fda9:4efe:7e3b:03ea::/64
 
-#tunnel-all-dns = true
+tunnel-all-dns = true
 dns = 192.168.1.2
 #nbns = 192.168.1.3
 #split-dns = example.com
@@ -109,8 +106,8 @@ output-buffer = 30
 #expose-iroutes = true
 
 select-group-by-url = false
-default-select-group = DEFAULT
-auto-select-group = true
+default-select-group = Default
+auto-select-group = false
 config-per-user = /etc/ocserv/config-per-user/
 config-per-group = /etc/ocserv/config-per-group/
 #default-user-config = /etc/ocserv/defaults/user.conf
@@ -123,7 +120,7 @@ config-per-group = /etc/ocserv/config-per-group/
 
 #user-profile = profile.xml
 cisco-client-compat = true
-#dtls-psk = false
+dtls-psk = false
 dtls-legacy = true
 cisco-svc-client-compat = false
 client-bypass-protocol = false
